# loader

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  constants.hpp.in
include/: logger.hpp  manager.hpp  mod.hpp
private/: graph.hpp  manager.impl.hpp  mod.impl.hpp
schemas/: config.json
src/: graph.cpp  logger.cpp  main.cpp  manager.cpp  manager.impl.cpp  mod.cpp  mod.impl.cpp
